[gd_scene load_steps=9 format=2]

[ext_resource path="res://hg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://objects/misc/world.tres" type="Environment" id=2]
[ext_resource path="res://objects/rotator.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://menus/MainMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 56
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.184314, 0.188235, 0.639216, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
shadow_size = 6

[sub_resource type="DynamicFont" id=3]
size = 36
use_filter = true
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node"]
script = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_right = 110.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.239216, 0.8, 0.266667, 1 )
text = "CENTRI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -127.455
margin_right = 121.0
margin_bottom = -41.455
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="option" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.617
margin_top = 37.079
margin_right = 143.383
margin_bottom = 123.079
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.149
margin_top = 202.131
margin_right = 122.851
margin_bottom = 288.131
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rotator" parent="." instance=ExtResource( 3 )]
position = Vector2( 181.361, 336.813 )
angular_velocity = 4.0

[node name="rotator2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1106.67, 336.813 )
angular_velocity = 2.5

[node name="ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 1117.82, 245.061 )
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
